--- a/src/prototipogym/view/mantenimientos/ManClientes.form
+++ b/src/prototipogym/view/mantenimientos/ManClientes.form
@@ -84,7 +84,7 @@
                               </Group>
                               <Component id="ButtonGuardar" min="-2" pref="90" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="109" max="32767" attributes="0"/>
+                          <EmptySpace pref="71" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="ButtonLimpiar" min="-2" pref="78" max="-2" attributes="0"/>
@@ -114,14 +114,16 @@
                                           <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="TextBalance" max="32767" attributes="0"/>
-                                      <Component id="TipoCliente" max="32767" attributes="0"/>
-                                      <Component id="Status" max="32767" attributes="0"/>
-                                      <Component id="TextCelular" max="32767" attributes="0"/>
-                                      <Component id="TextCorreo" max="32767" attributes="0"/>
-                                      <Component id="TextCuota" pref="140" max="32767" attributes="0"/>
-                                      <Component id="TextFechaIngreso" max="32767" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="TextBalance" max="32767" attributes="0"/>
+                                          <Component id="TipoCliente" pref="178" max="32767" attributes="0"/>
+                                          <Component id="TextCelular" max="32767" attributes="0"/>
+                                          <Component id="TextCorreo" max="32767" attributes="0"/>
+                                          <Component id="TextCuota" max="32767" attributes="0"/>
+                                          <Component id="TextFechaIngreso" max="32767" attributes="0"/>
+                                      </Group>
+                                      <Component id="CheckBox" alignment="0" min="-2" pref="93" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
                               </Group>
@@ -177,14 +179,14 @@
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="Status" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="CheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="TextSapellido" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
@@ -462,22 +464,6 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TextFechaIngresoActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JComboBox" name="Status">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="c8" green="c8" red="c8" type="rgb"/>
-            </Property>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="Activo"/>
-                <StringItem index="1" value="No Activo"/>
-              </StringArray>
-            </Property>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabel11">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -611,6 +597,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="CheckBox">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Activo"/>
           </Properties>
         </Component>
       </SubComponents>
