--- a/src/prototipogym/view/mantenimientos/ManEntrenador.form
+++ b/src/prototipogym/view/mantenimientos/ManEntrenador.form
@@ -281,6 +281,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="etiqueta">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="ButtonGuardar">
           <Properties>
