--- a/src/prototipogym/view/mantenimientos/ManEstadoReserva.form
+++ b/src/prototipogym/view/mantenimientos/ManEstadoReserva.form
@@ -225,6 +225,11 @@
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="etiqueta">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
