--- a/src/prototipogym/view/mantenimientos/ManHoraActi.form
+++ b/src/prototipogym/view/mantenimientos/ManHoraActi.form
@@ -281,10 +281,8 @@
         </Component>
         <Component class="javax.swing.JLabel" name="etiqueta">
           <Properties>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                <LineBorder/>
-              </Border>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
           </Properties>
         </Component>
