--- a/src/prototipogym/view/mantenimientos/ManClientes.form
+++ b/src/prototipogym/view/mantenimientos/ManClientes.form
@@ -72,19 +72,21 @@
                               <Component id="etiqueta" alignment="0" min="-2" pref="77" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="Text_ID" pref="140" max="32767" attributes="0"/>
-                                  <Component id="TextNombre" max="32767" attributes="0"/>
-                                  <Component id="TextPapellido" max="32767" attributes="0"/>
-                                  <Component id="TextSapellido" max="32767" attributes="0"/>
-                                  <Component id="TextDireccion" max="32767" attributes="0"/>
-                                  <Component id="TextFechaNac" max="32767" attributes="0"/>
-                                  <Component id="TextTelefono" alignment="0" max="32767" attributes="0"/>
-                              </Group>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="Text_ID" max="32767" attributes="0"/>
+                              <Component id="TextNombre" max="32767" attributes="0"/>
+                              <Component id="TextPapellido" max="32767" attributes="0"/>
+                              <Component id="TextSapellido" max="32767" attributes="0"/>
+                              <Component id="TextDireccion" max="32767" attributes="0"/>
+                              <Component id="TextTelefono" alignment="0" max="32767" attributes="0"/>
                               <Component id="ButtonGuardar" min="-2" pref="90" max="-2" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="Chooser" min="-2" pref="102" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="TextFechaNac" min="-2" pref="62" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace pref="71" max="32767" attributes="0"/>
+                          <EmptySpace pref="123" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="ButtonLimpiar" min="-2" pref="78" max="-2" attributes="0"/>
@@ -115,7 +117,7 @@
                                       </Group>
                                   </Group>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                           <Component id="TextBalance" max="32767" attributes="0"/>
                                           <Component id="TipoCliente" pref="178" max="32767" attributes="0"/>
                                           <Component id="TextCelular" max="32767" attributes="0"/>
@@ -123,7 +125,7 @@
                                           <Component id="TextCuota" max="32767" attributes="0"/>
                                           <Component id="TextFechaIngreso" max="32767" attributes="0"/>
                                       </Group>
-                                      <Component id="CheckBox" alignment="0" min="-2" pref="93" max="-2" attributes="0"/>
+                                      <Component id="CheckBox" min="-2" pref="68" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
                               </Group>
@@ -136,7 +138,7 @@
                   <Component id="jLabel16" min="-2" pref="48" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" pref="207" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="244" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="282" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -207,14 +209,13 @@
                   </Group>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="TextFechaNac" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                          <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="TextBalance" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
                           <Component id="jLabel14" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TextFechaNac" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
                       </Group>
+                      <Component id="Chooser" min="-2" pref="32" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
@@ -415,6 +416,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="TextFechaNac">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c8" green="c8" red="c8" type="rgb"/>
             </Property>
@@ -627,6 +629,8 @@
               <Image iconType="3" name="/resources/icons/customer_person_people_man_user_client_1629.png"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="com.toedter.calendar.JDateChooser" name="Chooser">
         </Component>
       </SubComponents>
     </Container>
