--- a/src/prototipogym/view/consultas/ConCliente.form
+++ b/src/prototipogym/view/consultas/ConCliente.form
@@ -195,11 +195,12 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Socio Activo"/>
-                <StringItem index="1" value="Invitado"/>
-                <StringItem index="2" value="Activo"/>
-                <StringItem index="3" value="Pasivo"/>
+              <StringArray count="5">
+                <StringItem index="0" value="Todos"/>
+                <StringItem index="1" value="Socio Activo"/>
+                <StringItem index="2" value="Invitado"/>
+                <StringItem index="3" value="Activo"/>
+                <StringItem index="4" value="Pasivo"/>
               </StringArray>
             </Property>
           </Properties>
