--- a/src/prototipogym/view/consultas/ConUsuario.form
+++ b/src/prototipogym/view/consultas/ConUsuario.form
@@ -186,9 +186,10 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="Administrador"/>
-                <StringItem index="1" value="Normal"/>
+              <StringArray count="3">
+                <StringItem index="0" value="Todos"/>
+                <StringItem index="1" value="Administrador"/>
+                <StringItem index="2" value="Normal"/>
               </StringArray>
             </Property>
           </Properties>
